Sync: carry World persistence CI fix into POC stack